# MayaGoz

./: CMakeLists.txt  CMakeSettings.json
cmake/: MayaConfig.cmake
src/: CMakeLists.txt  maya_plugin_main.cpp
src/goz/: CMakeLists.txt  goz_core.h  goz_parser.cpp  goz_parser.h  goz_writer.cpp  goz_writer.h
src/goz_maya/: CMakeLists.txt  GozFileTranslator.cpp  GozFileTranslator.h  goz_to_mesh.cpp  goz_to_mesh.h  mesh_to_goz.cpp  mesh_to_goz.h
